--- a/index.css
+++ b/index.css
@@ -2,5 +2,6 @@
 {
     height: 100px;
     width:100px;
-    border:1px solid black
+    border:1px solid black;
+    box-shadow: 0px 0px 5px 5px lightslategrey;
 }
